--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures() {
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -49,4 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-storage'
+
+    implementation 'io.github.sangcomz:fishbun:1.0.0-beta01'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 }
